# HeyMikkel

./: ARBEJD-ANDEN-MAC.md  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
scripts/: hey-mikkel-cargo-paths.mjs  macos-codesign-debug-app.mjs  macos-codesign-watcher.mjs  macos-create-signing-cert.mjs  macos-open-debug-app.mjs  macos-sign-manual.mjs  run-tauri-dev.mjs
src/: App.tsx  OverlayApp.tsx  macosMicPermission.ts  overlay.css  overlayMain.tsx  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mic_native.rs
src/hooks/: useVoiceSession.ts
src/voice/: audioUtils.ts  prompts.ts  settings.ts  types.ts
